# ttyrec2video

./: .gitignore  .travis.yml  CMD.md  MANIFEST.in  README.rst  TODO.md  frames.py  requirements.txt  setup.cfg  tox.ini  ttyrec2mp4.py  ttyrec2png.py
.github/workflows/: test.yml
debug/: colors.py  debug.py  framedump.py  inspect_frame.py
lib/: read_ttyrec.py  screen_imager.py  ttyrec_cls.py
src/ttyrec2video/: __init__.py  __main__.py
test/: test_cli_info.py  test_read_ttyrec.py
test/data/: hello.ttyrec  short.ttyrec
ttyrec2video/: __main__.py  info.py  read_ttyrec.py  reader.py  renderer.py
