[aliases]
make = sdist bdist_wheel

[metadata]
name = ttyrec2video
version = attr:ttyrec2video.__version__
description = Convert ttyrec files to videos
long_description = file:README.rst
author = John Thorvald Wodder II
author_email = ttyrec2video@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/ttyrec2video

keywords =
    mp4
    NAO
    nethack.alt.org
    playback
    playttyrec
    recording
    terminal
    ttyplay
    ttyrec
    video

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: End Users/Desktop
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Terminals :: Terminal Emulators/X Terminals

[options]
packages = find:
python_requires = ~=3.4
install_requires =
    attrs    ~= 17.01
    click    ~= 6.5
    imageio  ~= 2.1.2
    numpy    ~= 1.13
    Pillow   == 4.*
    pyte     ~= 0.7.0
    requests == 2.*
    setuptools  # for pkg_resources
include_package_data = True

[options.entry_points]
console_scripts =
    ttyrec2video = ttyrec2video.__main__:main
    ttyrec-info  = ttyrec2video.info:main
